# vehicle_detection

./: .gitignore  README.md  communication.cpp  communication.h  resolve.cpp
demo_pcl/: CMakeLists.txt  main.cpp  my_main.cpp  pcl_demo.cpp  pcl_demo_copy.cpp
get_scan_data/: CMakeLists.txt  package.xml
get_scan_data/include/: get_lds_data.h
get_scan_data/src/: get_lds_data.cpp  get_lds_data_holder.cpp  get_lds_data_rail.cpp  get_lds_data_rail_slant.cpp  get_lds_data_revolute.cpp  get_lds_data_revolute_multi.cpp
get_scan_data/urdf/: lds_holder.urdf.xacro  lds_parallel_verticle.urdf.xacro  lds_rail.urdf.xacro  lds_revolute.urdf.xacro  sick_lms5xx.urdf.xacro
lds_controler/: CMakeLists.txt  package.xml
lds_controler/src/: lds_holder_control.cpp  lds_prismatic.cpp  lds_rail_control.cpp  lds_revolute.cpp  lds_revolute_circle.cpp  lds_revolute_control.cpp  lds_revolute_multi_control.cpp
lds_data/: CMakeLists.txt  package.xml
lds_data/include/: lds_data.h
lds_data/src/: get_lds_data.cpp  laserscan2pointcloud_prismatic.cpp  laserscan2pointcloud_revolute.cpp  laserscan2pointcloud_revolute_circle.cpp  lds_data.cpp
lds_data/urdf/: lds_prismatic.urdf.xacro  lds_revolute.urdf.xacro  lds_revolute_circle.urdf.xacro  lds_xy.urdf.xacro  sick_lms5xx.urdf.xacro
pcd_data/: cloud_downsampled.pcd  cloud_right.pcd
pcd_data/pcd_data_multi/: test_pcd1.pcd  test_pcd2.pcd  test_pcd3.pcd
pcd_data/pcd_data_multi1/: test_pcd1.pcd  test_pcd2.pcd  test_pcd3.pcd
pcd_data/pcd_data_multi2/: test_pcd1.pcd  test_pcd2.pcd  test_pcd3.pcd
scan_gazebo_simu/: CMakeLists.txt  package.xml
scan_gazebo_simu/config/: sick_holder_control.yaml  sick_rail_control.yaml  sick_revolute_control.yaml
scan_gazebo_simu/launch/: demo.launch  scan_truck_holder.launch  scan_truck_rail.launch  scan_truck_rail_hydro.launch  scan_truck_rail_hydro_cross.launch  scan_truck_rail_hydro_par.launch  scan_truck_rail_hydro_slant.launch  scan_truck_rail_newtruck.launch  scan_truck_rail_slant.launch  scan_truck_rail_slant_twocar.launch  scan_truck_rail_step1.launch  scan_truck_rail_step2.launch  scan_truck_rail_step3.launch  scan_truck_rail_step_cross.launch  scan_truck_rail_step_par.launch  scan_truck_rail_step_slant.launch  scan_truck_rail_strip_cross.launch  scan_truck_rail_strip_par.launch  scan_truck_rail_strip_slant.launch  scan_truck_revolute.launch
scan_gazebo_simu/plugins/: PriusPlugin.cpp  PriusPlugin.h  gazebo_ros_laser.cpp  gazebo_ros_laser.h
scan_gazebo_simu/rviz/: lds.rviz
vehicle_description/: CMakeLists.txt  package.xml
vehicle_description/meshes/truck/: truck2.mtl
vehicle_description/models/prius/: model.config  model.sdf  model1.sdf  modelfull.sdf
vehicle_description/urdf/: prius.urdf  truck.urdf  truck_hydro.urdf  truck_hydro_strip(cross).urdf  truck_hydro_strip(par).urdf  truck_hydro_strip(slant).urdf  truck_step1.urdf  truck_step2.urdf  truck_step3.urdf  truck_step_strip(cross).urdf  truck_step_strip(par).urdf  truck_step_strip(slant).urdf  truck_strip(cross).urdf  truck_strip(par).urdf  truck_strip(slant).urdf
vehicle_detection/: CMakeLists.txt  package.xml  vh_detect_holder.cpp  vh_detect_holder_copy.cpp  vh_detect_holder_reprocess.cpp  vh_detect_rail.cpp  vh_detect_rail_slant.cpp  vh_detect_rail_slant_old.cpp  vh_detect_revolute.cpp  vh_detect_revolute_v1.cpp  vh_detect_revolute_v2.cpp  vh_detect_revolute_v3.cpp
vehicle_detection/launch/: demo.launch
vehicle_detection/models/lds/: model.config  model.sdf
vehicle_detection/plugins/: PriusPlugin.cpp  PriusPlugin.h  gazebo_ros_laser.cpp
vehicle_detection/rviz/: lds.rviz
vehicle_detection/trunk_detect_lby/: CMakeLists.txt  trunk_measuring.cpp
vehicle_detection/urdf/: lds_parallel.urdf  lds_parallel.urdf.xacro  lds_verticle.urdf  lds_verticle.urdf.xacro  sick_lms5xx.urdf.xacro
vehicle_detection/worlds/: empty.world  lds.world
vehicle_gazebo_simu/: CMakeLists.txt  package.xml
vehicle_gazebo_simu/config/: sick_prismatic_control.yaml  sick_revolute_control.yaml
vehicle_gazebo_simu/launch/: demo.launch  scan_truck_prismatic.launch  scan_truck_revolute.launch  scan_truck_revolute_circle.launch
vehicle_gazebo_simu/plugins/: PriusPlugin.cpp  PriusPlugin.h  PriusPlugin.old  gazebo_ros_laser.h
vehicle_gazebo_simu/rviz/: lds.rviz
vehicle_gazebo_simu/worlds/: empty.world
