<?xml version="1.0"?>
<package format="2">
  <name>get_scan_data</name>
  <version>0.0.0</version>
  <description>Getting lds scan data package</description>

  <maintainer email="zlk@todo.todo">zlk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>laser_geometry</build_depend>
  <exec_depend>laser_geometry</exec_depend>
  
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>
