<?xml version="1.0"?>
<package format="2">
  <name>lds_data</name>
  <version>0.0.0</version>
  <description>The lds_data package</description>

  <maintainer email="zlk@todo.todo">zlk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
