<?xml version="1.0"?>
<package format="2">
  <name>vehicle_description</name>
  <version>0.0.0</version>
  <description>The vehicle_description package</description>

  <maintainer email="zlk@todo.todo">zlk</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
